working searchsort UI, added tests