@@ -8,6 +8,7 @@ import java.awt.event.ActionListener;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 public class SearchSortRecipesUI extends JFrame{
     // search controller
@@ -18,7 +19,7 @@ public class SearchSortRecipesUI extends JFrame{
     JButton searchButton = new JButton("Search");
 
     // search criteria input fields and labels
-    JLabel title = new JLabel("Search & Sort Recipes");
+    JLabel title = new JLabel("Search & Sort for Recipes");
 
     JTextField nameInput = new JTextField(40);
     JLabel nameLabel = new JLabel("Name/Keyword: ");
@@ -46,48 +47,58 @@ public class SearchSortRecipesUI extends JFrame{
     public SearchSortRecipesUI(AppController appController){
         this.searchController = appController.getSearchController();
 
+        searchPanel.setLayout(new BoxLayout(searchPanel, BoxLayout.Y_AXIS));
+
         title.setAlignmentX(Component.CENTER_ALIGNMENT);
+        title.setFont(new Font("Serif", Font.PLAIN, 50));
+        searchPanel.add(title);
 
         nameInput.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(nameInput);
         nameLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(nameLabel);
 
         cuisineInput.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(cuisineInput);
         cuisineLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(cuisineLabel);
 
         ingredientsInput.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(ingredientsInput);
         ingredientsLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(ingredientsLabel);
+
 
         timeInput.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(timeInput);
         timeLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(timeLabel);
 
         sortTypeInput.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(sortTypeInput);
         sortTypeLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
+        searchPanel.add(sortTypeLabel);
 
         isSortAscendingInput.setAlignmentX(Component.CENTER_ALIGNMENT);
-        isSortAscendingLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
-
-        searchPanel.add(nameInput);
-        searchPanel.add(nameLabel);
-        searchPanel.add(cuisineInput);
-        searchPanel.add(cuisineLabel);
-        searchPanel.add(ingredientsInput);
-        searchPanel.add(ingredientsLabel);
-        searchPanel.add(timeInput);
-        searchPanel.add(timeLabel);
-        searchPanel.add(sortTypeInput);
-        searchPanel.add(sortTypeLabel);
         searchPanel.add(isSortAscendingInput);
+        isSortAscendingLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
         searchPanel.add(isSortAscendingLabel);
 
         searchButton.setAlignmentX(Component.CENTER_ALIGNMENT);
         searchButton.addActionListener(new ActionListener() {
             @Override
             public void actionPerformed(ActionEvent e) {
+                // turn inputted ingredient string into array of ingredients with no leading/trailing whitespace
+                String[] inputIngredients = ingredientsInput.getText().split(",");
+                String[] trimmedInputIngredients = new String[inputIngredients.length];
+                for (int i = 0; i < inputIngredients.length; i++)
+                    trimmedInputIngredients[i] = inputIngredients[i].trim();
+
                 try {
                     searchController.getSearchResults(
                             nameInput.getText(),
                             cuisineInput.getText(),
-                            new ArrayList<>(Arrays.asList(ingredientsInput.getText().split(","))),
+                            ingredientsInput.getText().isEmpty() ? new ArrayList<>(List.of()) : (new ArrayList<>(Arrays.asList(trimmedInputIngredients))),
                             timeInput.getText().isEmpty() ? 0 : Integer.parseInt(timeInput.getText()),
                             sortTypeInput.getText(),
                             isSortAscendingInput.isSelected()
